<resources>
    <string name="app_name">Fiscalize</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btnEntrar">Entrar</string>
    <string name="hintUser">Usuário</string>
    <string name="acessar">Iniciar Sessão</string>
    <string name="hintSenha">Senha</string>
    <string name="msgError">Usuário ou senha incorretos</string>
    <string name="wellcome">Bem-vindo de volta, Usuário</string>
    <string name="reporte">Reporte</string>
    <string name="reportar">Reportar</string>
</resources>